# pkg_resources

./: README.md  __init__.py  pyproject.toml
tests/: conftest.py  test_integration_zope_interface.py
